	gtk/Graphics/UI/Gtk/Ornaments/HSeparator.chs,
	gtk/Graphics/UI/Gtk/Ornaments/VSeparator.chs: just for fun, last
	trivial	change so that these modules are exactly the same as those
	produced by the code generator!

	* gtk/Graphics/UI/Gtk/Misc/Calendar.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/Combo.chs.pp: fix compilation
	with DISABLE_DEPRECATED.

2005-04-08 Axel Simon <A.Simon@kent.ac.uk>

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp,
	gtk/Graphics/UI/Gtk/MenuComboToolbar/ComboBox.chs.pp,
	gtk/Graphics/UI/Gtk/Multiline/TextView.chs.pp,
	gtk/Graphics/UI/Gtk/Windows/Window.chs.pp,
	tools/hierarchyGen/hierarchy.list: Corrected conditional
	compilation so that it compiles with Gtk 2.4.
	
2005-04-7 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Abstract/Paned.chs.pp: add several new signals

	* gtk/Graphics/UI/Gtk/Abstract/Range.chs: tidy up header and export
	list. Unfortunately, we cannot export onValueChanged at the moment
	since it clashes with the same signals from another module.

	* gtk/Graphics/UI/Gtk/Abstract/Scrollbar.hs: add extra module level
	documentation.

	* gtk/Graphics/UI/Gtk/Abstract/Widget.chs.pp: bind 26 extra functions.
	Update TODO list and other minor changes.

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp: bind two new functions.

	* gtk/Graphics/UI/Gtk/Display/Image.chs.pp: bind a few more functions
	and a property.

	* gtk/Graphics/UI/Gtk/Display/Label.chs.pp: bind 10 more methods and a
	few properties. Update docs to refer to PangoLayout rather than	Layout.

	* gtk/Graphics/UI/Gtk/Embedding/Plug.chs,
	gtk/Graphics/UI/Gtk/Embedding/Socket.chs: merge from generated
	modules. Code formatting and documentation changes.

	* gtk/Graphics/UI/Gtk/Gdk/Region.chs.pp: change use of deprecated
	function 'withObject' to 'with'. Remove support for ghc pre 5.04.

	* gtk/Graphics/UI/Gtk/MenuComboToolbar/ComboBox.chs.pp: add bindings
	for several new methods and properties.
